# gnchrv

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: .env.template  main.py
backend/app/admin/: __init__.py
backend/app/alembic/: env.py
backend/app/core/: __init__.py  base.py  config.py  db_helper.py
backend/app/core/models/: __init__.py  base.py  contact.py  content.py  date.py  db_helper.py  hashtag.py  knowledge.py  project.py  project_detail.py  project_feature.py  project_technology_association.py  project_type.py  publication.py  soft_skill.py  tech_category.py  technology.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.tsx
frontend/src/components/ArrowButton/: ArrowButton.module.scss  index.tsx
frontend/src/components/ButtonSelect/: ButtonSelect.module.scss  index.tsx
frontend/src/components/Contact/: Contact.module.scss  index.tsx
frontend/src/components/DateList/: DateList.module.scss  index.tsx
frontend/src/components/Dropdown/: Dropdown.module.scss  index.tsx
frontend/src/components/DropdownMenu/: DropdownMenu.module.scss  index.tsx
frontend/src/components/Footer/: Footer.module.scss  index.tsx
frontend/src/components/Header/: Header.module.scss  index.tsx
frontend/src/components/ImageLayout/: index.tsx  (+1 more)
frontend/src/pages/: Root.tsx
frontend/src/scss/: _variables.scss  style.scss
nginx/: Dockerfile  bootstrap.conf  dev.conf  nginx.conf  prod.conf
(+29 files in other folders)
